--- a/_NewFrontEnd/src/app/app.component.html
+++ b/_NewFrontEnd/src/app/app.component.html
@@ -9,10 +9,13 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a routerLink="/login" routerLinkActive="active">Login</a>
+        <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/plantitems" routerLinkActive="active">Plant Items List</a>
+        <a routerLink="/plantitems" routerLinkActive="active" class="nav-link">Plant Items List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login" routerLinkActive="active"  (click)="onLogOutClicked()">Log Out</a>
       </li>
     </ul>
   </div>
