--- a/_NewFrontEnd/src/app/login/login.component.html
+++ b/_NewFrontEnd/src/app/login/login.component.html
@@ -1,1 +1,13 @@
-<h1>Logging In Active</h1>
+<form [formGroup]='loginForm'>
+    <div class='form-group'>
+        <label for="username">Username</label>
+        <input type="text" formControlName='username' class="form-control">
+    </div>
+    <div class='form-group'>
+        <label for="password">Password</label>
+        <input type="password" formControlName='password' class="form-control">
+    </div>
+    <div class='form-group'>
+        <button  class="btn btn-primary" (click)="onSubmit(loginForm)">Login</button>
+    </div>
+</form>
