--- a/_NewFrontEnd/src/app/app.component.html
+++ b/_NewFrontEnd/src/app/app.component.html
@@ -6,17 +6,17 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
+        <a routerLink="/login" routerLinkActive="active" class="nav-link" id="loginLink">Login</a>
       </li>
       <li class="nav-item">
         <a routerLink="/plantitems" routerLinkActive="active" class="nav-link">Plant Items List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/login" routerLinkActive="active"  (click)="onLogOutClicked()">Log Out</a>
-      </li>
+        <a class="nav-link" routerLink="/login" routerLinkActive="active" id='logoutLink' (click)="onLogOutClicked()">Log Out</a>
+      </li> 
     </ul>
   </div>
 </nav>
