--- a/_NewFrontEnd/src/app/login/login.component.html
+++ b/_NewFrontEnd/src/app/login/login.component.html
@@ -1,13 +1,47 @@
-<form [formGroup]='loginForm'>
+<style>
+    #loginFormDesign{
+        width: 750px;
+        height: 350px;
+        background-color: #f2f2f2;
+        margin-top: 25px;
+        display: block;
+        align-items: center;
+        margin-left: auto; margin-right: auto;
+    }
+
+    #loginFormInput{
+        width: 50%;
+        display: block;
+        align-items: center;
+        margin-left: auto; margin-right: auto;
+        font-weight: bold;
+    }
+
+    #labelStyle{
+        display: block;
+        align-items: center;
+        margin-left: auto; margin-right: auto;
+        font-weight: bold;
+    }
+    
+    .form-fields{
+        padding-top: 50px;
+    }
+
+</style>
+
+<form [formGroup]='loginForm' id='loginFormDesign'>
+    <div class="form-fields">
     <div class='form-group'>
-        <label for="username">Username</label>
-        <input type="text" formControlName='username' class="form-control">
+        <label for="username" id='loginFormInput'>Username</label>
+        <input type="text" formControlName='username' class="form-control" id='loginFormInput'>
     </div>
     <div class='form-group'>
-        <label for="password">Password</label>
-        <input type="password" formControlName='password' class="form-control">
+        <label for="password" id='loginFormInput'>Password</label>
+        <input type="password" formControlName='password' class="form-control" id='loginFormInput'>
     </div>
     <div class='form-group'>
-        <button  class="btn btn-primary" (click)="onSubmit(loginForm)">Login</button>
+        <button  class="btn btn-primary" id='loginFormInput' (click)="onSubmit(loginForm)">Login</button>
+    </div>
     </div>
 </form>
