--- a/_NewFrontEnd/src/app/plant-list/plant-list.component.html
+++ b/_NewFrontEnd/src/app/plant-list/plant-list.component.html
@@ -1,4 +1,28 @@
-<table class="table-striped">
+<style>
+  .table-position{
+  margin-left: 25px; 
+  margin-top: 15px;
+}
+#updateform{
+  width: 750px;
+  height: 330px;
+  background-color: #f2f2f2;
+  margin-left: 650px;
+  margin-top: -355px;
+}
+#createForm{
+  width: 750px;
+  height: 330px;
+  background-color: #f2f2f2;
+  margin-left: 650px;
+  margin-top: 50px;
+}
+#btn1{
+  margin-right: 5px;
+}
+</style>
+
+<table class="table-striped table-position">
   <thead>
   <tr>
     <th scop="col"> # </th>
@@ -35,8 +59,27 @@
   <div class="form-group">
     <input type="text" class="form-control" id="yearAddedInput" placeholder="Enter Year Added (Min 1990 Max 2020)" formControlName="yearAdded">
   </div>
-  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+  <button id= "btn1" type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
   <button type="submit" class="btn btn-primary" (click)="onDelete()" [disabled]="!updatePlantItem.statusChanges">Delete</button>
+</form>
+</div>
+
+<div id="createForm">
+  <h3> Create A Plant Item </h3>
+  <form [formGroup]="createPlantItem" (ngSubmit)="createPlant()">
+  <div class="form-group">
+    <input type="text" class="form-control" id="hireIdInput" placeholder="Enter Hire ID (E.g C123A)" formControlName="hireID">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" id="itemTitleInput" placeholder="Enter Item Title (3 Tonne Digger)" formControlName="itemtitle">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" id="itemDescription" placeholder="Brand, Notable Features (Yanmar, Breaker)" formControlName="itemdescription">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" id="yearAddedInput" placeholder="Enter Year Added (Min 1990 Max 2020)" formControlName="yearAdded">
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="createPlant()">Submit</button>
 </form>
 </div>
 
